# weather-app

./: .gitignore  Makefile  README.md  app.yaml  manage.py  mkdocs.yml  requirements.txt
app/: __init__.py  schema.py
cornershop/apps/users/: setup.cfg
cornershop/apps/weather/: apps.py  models.py  schemas.py  serializers.py  setup.py  tox.ini  urls.py  views.py
cornershop/apps/weather/fixtures/: weather.json
cornershop/apps/weather/tests/: __init__.py  test_create.py  test_list.py  test_search.py
deploy/: Dockerfile
docs/: index.md
gateway/: schemas.py  urls.py  wsgi.py
gateway/config/: common.py  local.py
rest_api/: settings.py  urls.py
weather_app/: admin.py  apps.py  models.py  schemas.py  serializers.py  tests.py  urls.py  views.py
weather_app/migrations/: 0001_initial.py
