[metadata]
name = cornershop-users
version = 0.0.0
description = Cornershop users installable django app
long_description = file:README.rst
url = https://github.com/jpventura/cornershop-challenge
license = Apache-2.0
classifiers =
    Development Status :: 1 - Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: Apache 2.0 License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
python_requires = >=3.6
setup_requires =
    setuptools >= 38.3.0
install_requires =
    Django>=3.0
